# RadarImovel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.job  cloudbuild.yaml  context.md  pyproject.toml
.claude/: settings.json
.claude/sdd/: .detected-stack.md
.github/workflows/: deploy.yml
app/agents/: alert_agent.py  change_detector.py  deduplicator.py  score_agent.py
app/api/: main.py
app/calculator/: __init__.py  engine.py
app/connectors/: __init__.py  base.py  normalize_utils.py  pdf_utils.py  playwright_utils.py
app/core/: config.py  database.py  logging.py
app/entitlements/: __init__.py  audit.py  catalog.py  service.py
app/geodata/: __init__.py  bulk_insert.py
app/models/: __init__.py  bank.py  base.py  cost_table.py  document.py  plan.py  portfolio.py  prediction.py  property.py  risk.py  user.py
app/prediction/: __init__.py  price_drop.py  priors.yaml
app/rag/: __init__.py  chat.py  indexer.py
app/risk/: __init__.py  calculator.py  pdf_report.py  schemas.py
app/schemas/: edital.py  matricula.py
app/services/: email.py  geocoding.py  notification.py  push.py  telegram.py  whatsapp.py
docs/: ANALISE_CONCORRENCIA.md
frontend/: next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: AskEdital.tsx  DueDiligenceButton.tsx  EditalSection.tsx  FeatureGate.tsx  KanbanBoard.tsx  MatriculaSection.tsx  PriceDropForecast.tsx  PropertyFilters.tsx  PropertyTable.tsx  RiskIndicatorList.tsx  RiskMap.tsx  RiskRadarChart.tsx  RiskScoreBadge.tsx  ScoreBadge.tsx  SearchMap.tsx  TelegramConnect.tsx  ViabilityCalculator.tsx  WatchlistForm.tsx
frontend/hooks/: useAuth.ts  usePlan.ts  useProperties.ts  useRisk.ts
frontend/lib/: api.ts  banks.ts  entitlements.ts  firebase.ts  types.ts  utils.ts
infra/terraform/: cloud_run.tf  cloud_sql.tf  cloud_storage.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  scheduler.tf  secret_manager.tf  variables.tf  vertex.tf
jobs/: build_radar_index.py  calculate_risk.py  collect_bank.py  collect_caixa.py  collect_source.py  enrich_details.py  expire_subscriptions.py  load_geodata.py  predict_drops.py  process_alerts.py  process_editais.py  process_matriculas.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_zipcode_photo.py  003_seed_banks.py  004_edital_processing.py  005_update_banks.py  006_risk_scores.py  007_activate_all_banks.py  008_plans_rbac.py  009_cost_tables.py  010_portfolio_matricula.py  011_sources_offers.py  012_predictions.py  013_activate_auctioneers.py
scripts/: validate_caixa.py
tests/: conftest.py
tests/integration/: test_admin_plans.py  test_alert_agent.py  test_api_properties.py  test_ask_endpoint.py  test_calculate_risk.py  test_offers.py  test_portfolio.py  test_process_editais.py  test_subscription_lifecycle.py
tests/unit/: test_audit.py  test_calculator.py  test_channels.py  test_dedup_v2.py  (+3 more)
(+189 files in other folders)
