[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "radar-imovel"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "firebase-admin>=6.5",
    "redis>=5.0",
    "httpx>=0.27",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.9",
    "google-cloud-secret-manager>=2.20",
]
job = [
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "google-cloud-storage>=2.16",
    "google-cloud-pubsub>=2.21",
    "pg8000>=1.31",
    "cloud-sql-python-connector[pg8000]>=1.9",
    "firebase-admin>=6.5",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "factory-boy>=3.3",
    "responses>=0.25",
]
playwright = [
    "playwright>=1.44",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
